# delfino-docker

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.circleci/: config.yml
src/delfino_docker/: __init__.py  config.py
tests/: conftest.py
tests/integration/: test_plugin.py  test_pyproject_toml.py
tests/unit/: test_demo_command.py  test_get_python_version.py
